Upgrade to Gradle 8.5, Java 21 and deps